fix(swagger): fix some bug in swagger and dto
