# docs/swagger.json
@@ -25,17 +25,6 @@
                     "ACL"
                 ],
                 "summary": "Check Permission",
-                "parameters": [
-                    {
-                        "description": "Permission check information",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.CheckPermissionDTO"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -556,6 +545,11 @@
         },
         "/comments": {
             "put": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Updates an existing comment by ID",
                 "consumes": [
                     "application/json"
@@ -574,7 +568,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Comment"
+                            "$ref": "#/definitions/dto.CommentDto"
                         }
                     }
                 ],
@@ -594,6 +588,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Adds a new comment to a target",
                 "consumes": [
                     "application/json"
@@ -612,7 +611,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Comment"
+                            "$ref": "#/definitions/dto.CommentDto"
                         }
                     }
                 ],
@@ -634,6 +633,11 @@
         },
         "/comments/target": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns all comments for a polymorphic target",
                 "produces": [
                     "application/json"
@@ -676,6 +680,11 @@
         },
         "/comments/user/{user_id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns all comments created by a specific user",
                 "produces": [
                     "application/json"
@@ -711,6 +720,11 @@
         },
         "/comments/{id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns a comment by its ID",
                 "produces": [
                     "application/json"
@@ -746,6 +760,11 @@
         },
         "/comments/{parent_id}/replies": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns all replies for a given parent comment",
                 "produces": [
                     "application/json"
@@ -781,6 +800,11 @@
         },
         "/grading/user-answer/{id}": {
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Grade all questions in a user answer using automatic grading",
                 "consumes": [
                     "application/json"
@@ -837,6 +861,11 @@
         },
         "/grading/user-answer/{id}/appeal": {
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Allows a user to mark their answer as appealed for manual review",
                 "consumes": [
                     "application/json"
@@ -896,6 +925,11 @@
         },
         "/grading/user-answer/{id}/manual": {
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Allows a grader to manually change the score of a single question",
                 "consumes": [
                     "application/json"
@@ -952,6 +986,11 @@
         },
         "/quizzes": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns all quizzes",
                 "tags": [
                     "quizzes"
@@ -973,6 +1012,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Updates quiz details by ID",
                 "consumes": [
                     "application/json"
@@ -1011,6 +1055,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Creates a new quiz with questions",
                 "consumes": [
                     "application/json"
@@ -1051,6 +1100,11 @@
         },
         "/quizzes/categories": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns all available quiz categories",
                 "tags": [
                     "quizzes"
@@ -1074,6 +1128,11 @@
         },
         "/quizzes/categories/count": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns number of quizzes in each category",
                 "tags": [
                     "quizzes"
@@ -1097,6 +1156,11 @@
         },
         "/quizzes/category": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns all quizzes for a given category",
                 "tags": [
                     "quizzes"
@@ -1129,6 +1193,11 @@
         },
         "/quizzes/{id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Returns a single quiz by ID",
                 "tags": [
                     "quizzes"
@@ -1159,6 +1228,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Deletes a quiz by ID",
                 "tags": [
                     "quizzes"
@@ -1191,6 +1265,11 @@
         },
         "/ratings": {
             "put": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Update the score of a previously submitted rating",
                 "consumes": [
                     "application/json"
@@ -1241,6 +1320,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Allows a user to rate a question from 1 to 5",
                 "consumes": [
                     "application/json"
@@ -1293,6 +1377,11 @@
         },
         "/ratings/question/{question_id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve all ratings submitted for a specific question",
                 "produces": [
                     "application/json"
@@ -1331,6 +1420,11 @@
         },
         "/ratings/question/{question_id}/user/{user_id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve the rating submitted by a specific user for a specific question",
                 "produces": [
                     "application/json"
@@ -1379,6 +1473,11 @@
         },
         "/ratings/user/{user_id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve all question ratings submitted by a specific user",
                 "produces": [
                     "application/json"
@@ -1417,6 +1516,11 @@
         },
         "/ratings/{id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve a specific rating by its ID",
                 "produces": [
                     "application/json"
@@ -1497,6 +1601,11 @@
         },
         "/user-answers": {
             "post": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Create and store a user answer for a quiz",
                 "consumes": [
                     "application/json"
@@ -1555,6 +1664,11 @@
         },
         "/user-answers/quiz/{quiz_id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve all user answers for a specific quiz",
                 "produces": [
                     "application/json"
@@ -1611,6 +1725,11 @@
         },
         "/user-answers/quiz/{quiz_id}/user/{user_id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve answers submitted by a specific user for a specific quiz",
                 "produces": [
                     "application/json"
@@ -1674,6 +1793,11 @@
         },
         "/user-answers/user/{user_id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve all user answers submitted by a specific user",
                 "produces": [
                     "application/json"
@@ -1730,6 +1854,11 @@
         },
         "/user-answers/{id}": {
             "get": {
+                "security": [
+                    {
+                        "AuthBearer": []
+                    }
+                ],
                 "description": "Retrieve a user answer using its ID",
                 "produces": [
                     "application/json"
@@ -2105,6 +2234,24 @@
                 }
             }
         },
+        "dto.CommentDto": {
+            "type": "object",
+            "properties": {
+                "entity_id": {
+                    "description": "polymorphic reference",
+                    "type": "string"
+                },
+                "entity_type": {
+                    "type": "string"
+                },
+                "parent_id": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.CreateUserRequest": {
             "type": "object",
             "required": [
@@ -2172,7 +2319,6 @@
         "dto.QuestionDTO": {
             "type": "object",
             "required": [
-                "id",
                 "label",
                 "type"
             ],
@@ -2182,9 +2328,6 @@
                     "items": {
                         "type": "string"
                     }
-                },
-                "id": {
-                    "type": "string"
                 },
                 "key_words": {
                     "type": "array",
@@ -2246,8 +2389,7 @@
                 "category",
                 "level",
                 "questions",
-                "title",
-                "user_id"
+                "title"
             ],
             "properties": {
                 "category": {
@@ -2266,9 +2408,6 @@
                     }
                 },
                 "title": {
-                    "type": "string"
-                },
-                "user_id": {
                     "type": "string"
                 }
             }
@@ -2338,8 +2477,7 @@
             "type": "object",
             "required": [
                 "answers",
-                "quiz_id",
-                "user_id"
+                "quiz_id"
             ],
             "properties": {
                 "answers": {
@@ -2347,6 +2485,9 @@
                     "items": {
                         "$ref": "#/definitions/dto.AnswerDTO"
                     }
+                },
+                "id": {
+                    "type": "string"
                 },
                 "quiz_id": {
                     "type": "string"
@@ -2403,58 +2544,6 @@
                 },
                 "score": {
                     "type": "number"
-                }
-            }
-        },
-        "models.Comment": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "parent_id": {
-                    "type": "string"
-                },
-                "target": {
-                    "description": "polymorphic reference",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/models.DBRef"
-                        }
-                    ]
-                },
-                "text": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.DBRef": {
-            "type": "object",
-            "required": [
-                "$id",
-                "$ref"
-            ],
-            "properties": {
-                "$db": {
-                    "description": "Optional DB name",
-                    "type": "string"
-                },
-                "$id": {
-                    "description": "Document ID",
-                    "type": "string"
-                },
-                "$ref": {
-                    "description": "Collection name",
-                    "type": "string"
                 }
             }
         },
