# internal/dto/quiz_dto.go
@@ -6,12 +6,13 @@ import (
 )
 
 type QuizDTO struct {
-	Title     string             `json:"title" binding:"required"`
-	Category  string             `json:"category" binding:"required"`
-	Level     string             `json:"level" binding:"required"`
-	UserID    primitive.ObjectID `json:"user_id" binding:"required"`
-	Questions []QuestionDTO      `json:"questions" binding:"required,dive"`
-	CreatedAt time.Time          `json:"created_at" bson:"created_at"`
+	ID        primitive.ObjectID  `bson:"_id,omitempty" json:"id" swaggerignore:"true"`
+	Title     string              `json:"title" binding:"required"`
+	Category  string              `json:"category" binding:"required"`
+	Level     string              `json:"level" binding:"required"`
+	UserID    *primitive.ObjectID `json:"user_id" swaggerignore:"true"`
+	Questions []QuestionDTO       `json:"questions" binding:"required,dive"`
+	CreatedAt time.Time           `json:"created_at" bson:"created_at"`
 }
 
 type UpdateQuizDTO struct {
@@ -23,10 +24,10 @@ type UpdateQuizDTO struct {
 }
 
 type QuestionDTO struct {
-	ID            string   `json:"id" binding:"required"`
-	Type          string   `json:"type" binding:"required,oneof=short checkbox radio"`
-	Label         string   `json:"label" binding:"required"`
-	Options       []string `json:"options,omitempty"`
-	CorrectAnswer []string `json:"correct_answer,omitempty"`
-	KeyWords      []string `json:"key_words,omitempty"`
+	ID            primitive.ObjectID `json:"id" swaggerignore:"true"`
+	Type          string             `json:"type" binding:"required,oneof=short checkbox radio"`
+	Label         string             `json:"label" binding:"required"`
+	Options       []string           `json:"options,omitempty"`
+	CorrectAnswer []string           `json:"correct_answer,omitempty"`
+	KeyWords      []string           `json:"key_words,omitempty"`
 }
